fix gallery overlap jump

--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
 .stage-box {
     display: flex;
     background-color: black;
-    height: 780px;
+    height: 800px;
 }
 
 #stage {
